--- a/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
+++ b/src/omniintelligence/nodes/quality_scoring_compute/contract.yaml
@@ -19,7 +19,7 @@ operations:
   - name: "score_quality"
     description: "Score code quality"
     input_fields:
-      - file_path
+      - source_path
       - content
       - language
       - project_name
