--- a/src/omniintelligence/nodes/qdrant_vector_effect/contract.yaml
+++ b/src/omniintelligence/nodes/qdrant_vector_effect/contract.yaml
@@ -15,25 +15,31 @@ output_model:
   name: "ModelQdrantVectorOutput"
   module: "omniintelligence.nodes.qdrant_vector_effect.models"
   description: "Output containing operation status and search results."
-handler_routing:
-  routing_strategy: "payload_type_match"
-  handlers:
-    - operation: "upsert_vectors"
-      handler:
-        name: "HandlerQdrantUpsert"
-        module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_upsert"
-      description: "Upsert vectors to Qdrant collection"
-    - operation: "search_vectors"
-      handler:
-        name: "HandlerQdrantSearch"
-        module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_search"
-      description: "Search for similar vectors"
-    - operation: "delete_vectors"
-      handler:
-        name: "HandlerQdrantDelete"
-        module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_delete"
-      description: "Delete vectors from collection"
-  execution_mode: "sequential"
+# TODO: Handler routing - modules not yet implemented
+# When implementing, create handlers/ directory with the following modules:
+# - handler_qdrant_upsert.py (HandlerQdrantUpsert)
+# - handler_qdrant_search.py (HandlerQdrantSearch)
+# - handler_qdrant_delete.py (HandlerQdrantDelete)
+#
+# handler_routing:
+#   routing_strategy: "payload_type_match"
+#   handlers:
+#     - operation: "upsert_vectors"
+#       handler:
+#         name: "HandlerQdrantUpsert"
+#         module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_upsert"
+#       description: "Upsert vectors to Qdrant collection"
+#     - operation: "search_vectors"
+#       handler:
+#         name: "HandlerQdrantSearch"
+#         module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_search"
+#       description: "Search for similar vectors"
+#     - operation: "delete_vectors"
+#       handler:
+#         name: "HandlerQdrantDelete"
+#         module: "omniintelligence.nodes.qdrant_vector_effect.handlers.handler_qdrant_delete"
+#       description: "Delete vectors from collection"
+#   execution_mode: "sequential"
 error_handling:
   retry_policy:
     max_retries: 3
